Added Sidebar.js file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="js/grid/group/GroupBaseGrid.js"></script>
 <script type="text/javascript" src="js/grid/group/GroupGridCurrent.js"></script>
 <script type="text/javascript" src="js/grid/group/GroupGridHistorical.js"></script>
-<script type="text/javascript" src="js/Hyperlink.js"></script>
+<script type="text/javascript" src="js/SideBar.js"></script>
 <!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
 </head>
 <body>
