--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Homeowners</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="css/ext-all-notheme.css"/>
+<link rel="stylesheet" type="text/css" href="css/form.css"/>
 <link rel="stylesheet" type="text/css" href="css/gridgray.css"/>
 <link rel="stylesheet" type="text/css" href="css/app.css"/>
 <!-- <link rel="stylesheet" type="text/css" href="css/lightbox.css"/> -->
@@ -22,6 +23,7 @@
 <script type="text/javascript" src="js/grid/group/GroupBaseGrid.js"></script>
 <script type="text/javascript" src="js/grid/group/GroupGridCurrent.js"></script>
 <script type="text/javascript" src="js/grid/group/GroupGridHistorical.js"></script>
+<script type="text/javascript" src="js/FormWiz.js"></script>
 <script type="text/javascript" src="js/SideBar.js"></script>
 <!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
 </head>
