--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
 <!-- <link rel="stylesheet" type="text/css" href="css/lightbox.css"/> -->
 <script type="text/javascript" src="js/ext-base-debug.js"></script>
 <script type="text/javascript" src="js/ext-all-debug.js"></script>
-<script type="text/javascript" src="js/Main.js"></script> 
+<script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>
+<script type="text/javascript" src="js/Main.js"></script>
+<script type="text/javascript" src="js/Graph.js"></script>
 <script type="text/javascript" src="js/StartPage.js"></script>
-<script type="text/javascript" src="js/Formats.js"></script>
-<script type="text/javascript" src="js/grid/nongroup/LcmStore.js"></script>
-<script type="text/javascript" src="js/grid/nongroup/GridSummary.js"></script>
-<script type="text/javascript" src="js/grid/nongroup/BaseGrid.js"></script>
-<script type="text/javascript" src="js/grid/nongroup/GridCurrent.js"></script>
-<script type="text/javascript" src="js/grid/nongroup/GridHistorical.js"></script>
-<script type="text/javascript" src="js/grid/group/GroupLcmStore.js"></script>
-<script type="text/javascript" src="js/grid/group/GroupSummary.js"></script>
-<script type="text/javascript" src="js/grid/group/GroupBaseGrid.js"></script>
-<script type="text/javascript" src="js/grid/group/GroupGridCurrent.js"></script>
-<script type="text/javascript" src="js/grid/group/GroupGridHistorical.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
+<script type="text/javascript" src="js/Formats.js"></script>
+<script type="text/javascript" src="js/CompareGrid.js"></script>
 <script type="text/javascript" src="js/SideBar.js"></script>
 <!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
 </head>
