Finished grid class

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <!-- <link rel="stylesheet" type="text/css" href="css/lightbox.css"/> -->
 <script type="text/javascript" src="js/ext-base-debug.js"></script>
 <script type="text/javascript" src="js/ext-all-debug.js"></script>
-<script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>
+<!--<script type="text/javascript" src="js/adapter-extjs.js"></script>
+<script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>-->
 <script type="text/javascript" src="js/Main.js"></script>
-<script type="text/javascript" src="js/Graph.js"></script>
+<!--<script type="text/javascript" src="js/Graph.js"></script>-->
 <script type="text/javascript" src="js/StartPage.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
 <script type="text/javascript" src="js/Formats.js"></script>
