Added contact class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="js/StartPage.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
 <script type="text/javascript" src="js/Formats.js"></script>
+<script type="text/javascript" src="js/Store.js"></script>
 <script type="text/javascript" src="js/CompareGrid.js"></script>
 <script type="text/javascript" src="js/SideBar.js"></script>
 <!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
