Addedk Graph class

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <!-- <link rel="stylesheet" type="text/css" href="css/lightbox.css"/> -->
 <script type="text/javascript" src="js/ext-base-debug.js"></script>
 <script type="text/javascript" src="js/ext-all-debug.js"></script>
-<!--<script type="text/javascript" src="js/adapter-extjs.js"></script>
-<script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>-->
+<script type="text/javascript" src="js/adapter-extjs.js"></script>
+<script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>
+<!--[if IE]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
+<script type="text/javascript" src="js/Ext.ux.HighChart.js"></script>
 <script type="text/javascript" src="js/Main.js"></script>
-<!--<script type="text/javascript" src="js/Graph.js"></script>-->
+<script type="text/javascript" src="js/Graph.js"></script>
 <script type="text/javascript" src="js/StartPage.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
 <script type="text/javascript" src="js/Formats.js"></script>
 <script type="text/javascript" src="js/Store.js"></script>
 <script type="text/javascript" src="js/CompareGrid.js"></script>
+<!-- <script type="text/javascript" src="js/test.js"></script> -->
 <script type="text/javascript" src="js/SideBar.js"></script>
 <!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
 </head>
