--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--[if IE]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
 <script type="text/javascript" src="js/Ext.ux.HighChart.js"></script>
 <script type="text/javascript" src="js/Main.js"></script>
-<script type="text/javascript" src="js/Graph.js"></script>
+<script type="text/javascript" src="js/Graph2.js"></script>
 <script type="text/javascript" src="js/StartPage.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
 <script type="text/javascript" src="js/Formats.js"></script>
