New review class

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" type="text/css" href="css/ext-all-notheme.css"/>
 <link rel="stylesheet" type="text/css" href="css/form.css"/>
 <link rel="stylesheet" type="text/css" href="css/gridgray.css"/>
+<!--<link rel="stylesheet" type="text/css" href="css/window.css"/>-->
 <link rel="stylesheet" type="text/css" href="css/app.css"/>
-<!-- <link rel="stylesheet" type="text/css" href="css/lightbox.css"/> -->
 <script type="text/javascript" src="js/ext-base-debug.js"></script>
 <script type="text/javascript" src="js/ext-all-debug.js"></script>
 <script type="text/javascript" src="js/adapter-extjs.js"></script>
@@ -21,9 +21,8 @@
 <script type="text/javascript" src="js/Formats.js"></script>
 <script type="text/javascript" src="js/Store.js"></script>
 <script type="text/javascript" src="js/CompareGrid.js"></script>
-<!-- <script type="text/javascript" src="js/test.js"></script> -->
+<script type="text/javascript" src="js/Review.js"></script>
 <script type="text/javascript" src="js/SideBar.js"></script>
-<!-- <script type="text/javascript" src="js/lightbox.js"></script> -->
 </head>
 <body>
 </body>
