Final before move

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <title>Homeowners</title>
@@ -6,15 +6,12 @@
 <link rel="stylesheet" type="text/css" href="css/ext-all-notheme.css"/>
 <link rel="stylesheet" type="text/css" href="css/form.css"/>
 <link rel="stylesheet" type="text/css" href="css/gridgray.css"/>
-<!--<link rel="stylesheet" type="text/css" href="css/window.css"/>-->
 <link rel="stylesheet" type="text/css" href="css/app.css"/>
 <script type="text/javascript" src="js/ext-base-debug.js"></script>
 <script type="text/javascript" src="js/ext-all-debug.js"></script>
 <script type="text/javascript" src="js/adapter-extjs.js"></script>
 <script type="text/javascript" src="js/highcharts.1.2.6.src.js"></script>
-<!--[if IE]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
 <script type="text/javascript" src="js/Ext.ux.HighChart.js"></script>
-<script type="text/javascript" src="js/Main.js"></script>
 <script type="text/javascript" src="js/Graph2.js"></script>
 <script type="text/javascript" src="js/StartPage.js"></script>
 <script type="text/javascript" src="js/FormWiz.js"></script>
@@ -22,7 +19,9 @@
 <script type="text/javascript" src="js/Store.js"></script>
 <script type="text/javascript" src="js/CompareGrid.js"></script>
 <script type="text/javascript" src="js/Review.js"></script>
-<script type="text/javascript" src="js/SideBar.js"></script> 
+<script type="text/javascript" src="js/SideBar.js"></script>
+<script type="text/javascript" src="js/Main.js"></script>
+<!--[if IE]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
 </head>
 <body>
 </body>
